@@ -1,3 +1,8 @@
+2001-11-30  Eric Blake  <ebb9@email.byu.edu>
+
+	* src/definite.cpp (DefiniteAssertStatement): Fix a bug in assert
+	statement definite unassignment analysis.
+
 2001-11-26  Eric Blake  <ebb9@email.byu.edu>
 
 	* src/symbol.cpp (GetReadAccessMethod):
